--- a/index.html
+++ b/index.html
@@ -10,17 +10,7 @@
 
 <body>
     <div id="wrapper">
-        <header>
-            <img src="images/logo.png">
-            <h1>Alvey Portal Page</h1>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="wwr/index.html">WWR</a>
-                <a href="ice.html">ICE</a>
-                <a href="https://alveyworld.github.io/wdd130-smith/">Project</a>
-                
-            </nav>
-        </header>
+        <header id="header"></header>
         
         <main>
             <section class="col_left">
@@ -97,16 +87,24 @@
 
             </section>
         </main>
-        <footer>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="wwr/index.html">WWR</a></li>
-                <li><a href="ice.html">ICE</a></li>
-                <li><a href="https://alveyworld.github.io/wdd130-smith/">Project</a></li>
-            </ul>
-            <p>Copyright 2025 &copy;</p>
-        </footer>
+        <footer id="footer"></footer>
     </div>
 </body>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function(){
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("header").innerHTML = data;
+            });
+
+        fetch('footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById("footer").innerHTML = data;
+            });
+    });
+</script>
 
 </html>
